--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ nav ul li a:hover {
 .Thumb-Section {
     display: flex;
     justify-content: center;
+        transform: translate(0px, -10px);
     gap: 40px;
 }
 
