--- a/style.css
+++ b/style.css
@@ -1,182 +1,180 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 :root {
-    --Green: #017143;
-    --transition: all .5s;
+  --Green: #017143;
+  --transition: all 1s;
 }
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 main {
-    background: radial-gradient(#54ffb9, #017143);
-    min-height: 100vh;
-    max-height: 100vh;
+  background: radial-gradient(#54ffb9, #017143);
+  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .container {
-    margin: 0 100px;
+  margin: 0 100px;
 }
 
 header {
-    padding: 20px 0px;
-    display: flex;
-    justify-content: space-between;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 nav ul {
-    display: flex;
+  display: flex;
 }
 
 nav ul li a {
-    display: inline-block;
-    cursor: pointer;
-    color: #fff;
-    font-weight: 400;
-    margin-left: 40px;
+  display: inline-block;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 400;
+  margin-left: 40px;
+  transition: var(--transition);
 }
 
 nav ul li a:hover {
-    color: #000;
-    transform: scale(1.2);
-    transition: var(--transition);
+  color: #000;
+  transform: scale(1.2);
 }
 
 .Content-section {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .Text-Section {
-    display: flex;
-    max-width: 700px;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    align-content: center;
+  display: flex;
+  max-width: 700px;
+  flex-wrap: wrap;
+  align-items: flex-end;
+  align-content: center;
 }
 
 .Text-Section h2 {
-    color: #333;
-    font-size: 4em;
-    line-height: 1.4em;
-    font-weight: 500;
+  color: #333;
+  font-size: 4em;
+  line-height: 1.4em;
+  font-weight: 500;
 }
 
 .Text-Section h2 span {
-    color: var(--Green);
-    ;
-    font-size: 1.2em;
-    font-weight: 900;
+  color: var(--Green);
+  font-size: 1.2em;
+  font-weight: 900;
 }
 
 .Text-Section a {
-    margin-top: 15px;
-    padding: 7px 25px;
-    background: var(--Green);
-    color: white;
-    border-radius: 25px;
-    outline: none;
-    border: 1px solid var(--Green);
-    font-weight: 400;
+  margin-top: 15px;
+  padding: 7px 25px;
+  background: var(--Green);
+  color: white;
+  border-radius: 25px;
+  outline: none;
+  border: 1px solid var(--Green);
+  font-weight: 400;
+  transition: var(--transition);
 }
 
 .Text-Section a:hover {
-    color: var(--Green);
-    background-color: white;
-    border: 1px solid var(--Green);
-    transition: var(--transition);
+  color: var(--Green);
+  background-color: white;
+  border: 1px solid var(--Green);
 }
 
 .Img-Section {
-    width: 600px;
-    display: flex;
-    justify-content: center;
-    z-index: 1;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
 }
 
 .Img-Section img {
-    max-width: 340px;
-    animation: Pulse 8s ease-in-out 0ms infinite alternate-reverse none;
+  max-width: 340px;
+  animation: Pulse 8s ease-in-out 0ms infinite alternate-reverse none;
+  transition: var(--transition);
 }
 
 .Img-Section img:hover {
-    transform: rotateZ(12deg);
-    transition: var(--transition);
+  transform: rotateZ(12deg);
 }
 
 .Thumb-Section {
-    display: flex;
-    justify-content: center;
-        transform: translate(0px, -10px);
-    gap: 40px;
+  display: flex;
+  justify-content: center;
+  transform: translate(0px, -10px);
+  gap: 40px;
 }
 
 .Thumb-Section img {
-    max-width: 60px;
-    cursor: pointer;
-animation: Shake 10s ease-in-out 0ms infinite alternate-reverse none;
+  max-width: 60px;
+  cursor: pointer;
+  animation: Shake 10s ease-in-out 0ms infinite alternate-reverse none;
+  transition: var(--transition);
 }
 
 .Thumb-Section img:hover {
-    transform: translateY(-15px);
-    transition: var(--transition);
+  transform: translateY(-15px);
 }
-.Social-Section{
-    display: flex;
-        flex-direction: column;
-        max-width: 22px;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 30px;
-        z-index: 1;
+.Social-Section {
+  display: flex;
+  flex-direction: column;
+  max-width: 22px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 30px;
+  z-index: 1;
 }
-.Social-Section img{
-    max-width: 17px;
-    cursor: pointer;
-    filter: invert(1);
+.Social-Section img {
+  max-width: 17px;
+  cursor: pointer;
+  filter: invert(1);
+  transition: var(--transition);
 }
-.Social-Section img:hover{
-    transform: scale(1.5);
-    filter: invert(0);
-    transition: var(--transition);
+.Social-Section img:hover {
+  transform: scale(1.5);
+  filter: invert(0);
 }
-.circle{
-        position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #00ff9636;
-            clip-path: circle(600px at right 800px);
+.circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #00ff9636;
+  clip-path: circle(600px at right 800px);
 }
 @keyframes Pulse {
-    0% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(1);
+  }
 
-    50% {
-        transform: scale(1.1);
-    }
+  50% {
+    transform: scale(1.1);
+  }
 
-    100% {
-        transform: scale(1);
-    }
-
+  100% {
+    transform: scale(1);
+  }
 }
